examples/type_system/failing/122_hash_missing_close_brace.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let values = {one: 1, two: 2
let after = 3
